--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding">
+    android:padding="@dimen/padding"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +19,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-
         <!--Icon-->
         <ImageView
             android:layout_width="wrap_content"
@@ -29,11 +28,11 @@
         <!--Name-->
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></LinearLayout>
+            android:layout_height="wrap_content"
+            android:hint="Name :"
+            android:inputType="text"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="@color/colorPrimary" />
 
     </LinearLayout>
 
@@ -46,17 +45,16 @@
         android:textSize="@dimen/h2"
         android:textStyle="bold" />
 
-
     <RadioGroup
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <RadioButton
-        android:textColor="@color/colorPrimaryDark"
-        android:text="Male"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+            android:textColor="@color/colorPrimaryDark"
+            android:text="Male"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <RadioButton
             android:layout_marginLeft="20dp"
@@ -64,7 +62,6 @@
             android:text="Female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
 
     </RadioGroup>
 
@@ -88,10 +85,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView¡
-        android:id="@+id/LivName"
+    <ListView
+        android:id="@+id/livName"
         android:layout_marginTop="@dimen/padding"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
